<resources>
    <string name="app_name">UTS_PemogramanMobile</string>
    <string name="hitungan">0</string>
    <string name="button_toast">Toast</string>
    <string name="button_count">Count</string>
    <string name="hello_toast">Hello Toast</string>
    <!-- Nilai untuk activity_vertical_margin -->
    <dimen name="activity_vertical_margin">8dp</dimen>

    <!-- Nilai untuk activity_horizontal_margin -->
    <dimen name="activity_horizontal_margin">16dp</dimen>
    <string name="button_back">Back</string>
    <string name="text_edit">Input Here</string>
    <string name="max">MAX</string>
    <string name="lokasi">LOKASI</string>
    <string name="curug_embun_pelangi_dan_disebut_penduduk_sekitar_sebagai_curug_ibun_terletak_di_desa_sukadana_kecamatan_argapura_kabupaten_majalengka_untuk_menuju_ke_lokasi_air_terjun_ini_cukup_mudah_karena_terletak_kurang_lebih_3_kilometer_dari_pusat_kota_untuk_menuju_ke_lokasi_air_terjun_pengunjung_harus_berjalan_melewati_ladang_sayur_mayur_warga_dan_menuruni_tangga_yang_cukup_curam_dinamakan_curug_embun_pelangi_karena_embun_yang_tercipta_dari_jatuhnya_air_sungai_terkena_cahaya_mahtahari_sehingga_terlihat_pelangi_di_sekitar_air_terjun_selain_melihat_air_terjun_pengunjung_dapat_menikmati_panorama_tebing_batu_yang_mengapit_sungai_cilongkrang">Curug Embun Pelangi dan disebut penduduk sekitar sebagai Curug Ibun, terletak di Desa Sukadana, Kecamatan Argapura, Kabupaten Majalengka. Untuk menuju ke lokasi air terjun ini cukup mudah, karena terletak kurang lebih 3 kilometer dari pusat kota. Untuk menuju ke lokasi air terjun, pengunjung harus berjalan melewati ladang sayur-mayur warga dan menuruni tangga yang cukup curam. Dinamakan Curug Embun Pelangi karena embun yang tercipta dari jatuhnya air sungai terkena cahaya mahtahari sehingga terlihat pelangi di sekitar air terjun. Selain melihat air terjun, pengunjung dapat menikmati panorama tebing batu yang mengapit sungai Cilongkrang.</string>
    <string name="deskripsi">DESKRIPSI</string>
    <string name="alamat">ALAMAT</string>
    <string name="wisata_majalengka">Wisata Majalengka</string>
    <string name="air_terjun_embun_pelangi">Air Terjun Embun Pelangi</string>
    <string name="desa_sukadana_kecamatan_argapura_kabupaten_majalengka">Desa Sukadana, Kecamatan Argapura, Kabupaten Majalengka</string>
    <string name="todo">TODO</string>

    <!--    REPLY MASSAGE-->
    <string name="button_main">Send</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="text_header">Message Received</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>

    <string name="kalender">Kalender</string>

    <string name="play">Play</string>
    <string name="setim">set timer</string>
    <string name="back">Back</string>
    <string name="activity_satu">Activity Satu</string>
    <string name="alert">Alert</string>
    <string name="fibonacci">Fibonacci</string>
    <string name="hello_world">Hello World</string>
</resources>