<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:paddingBottom="20dp"
            android:text="@string/air_terjun_embun_pelangi"
            android:textAlignment="center"
            android:textColor="#9E9E9E"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/lokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="20sp"
            android:textColor="@color/blue" />

        <TextView
            android:text="@string/wisata_majalengka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textSize="20sp"
            android:textColor="?attr/colorControlNormal"
            android:paddingBottom="15dp"/>

        <TextView
            android:text="@string/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="20sp"
            android:textColor="@color/blue" />

        <TextView
            android:text="@string/desa_sukadana_kecamatan_argapura_kabupaten_majalengka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textSize="20sp"
            android:textColor="?attr/colorControlNormal"
            android:paddingBottom="15dp" />

        <TextView
            android:text="@string/deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="20sp"
            android:textColor="@color/blue" />

        <TextView
            android:text="@string/curug_embun_pelangi_dan_disebut_penduduk_sekitar_sebagai_curug_ibun_terletak_di_desa_sukadana_kecamatan_argapura_kabupaten_majalengka_untuk_menuju_ke_lokasi_air_terjun_ini_cukup_mudah_karena_terletak_kurang_lebih_3_kilometer_dari_pusat_kota_untuk_menuju_ke_lokasi_air_terjun_pengunjung_harus_berjalan_melewati_ladang_sayur_mayur_warga_dan_menuruni_tangga_yang_cukup_curam_dinamakan_curug_embun_pelangi_karena_embun_yang_tercipta_dari_jatuhnya_air_sungai_terkena_cahaya_mahtahari_sehingga_terlihat_pelangi_di_sekitar_air_terjun_selain_melihat_air_terjun_pengunjung_dapat_menikmati_panorama_tebing_batu_yang_mengapit_sungai_cilongkrang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textSize="20sp"
            android:textColor="?attr/colorControlNormal"
            android:paddingBottom="15dp"
            tools:ignore="VisualLintLongText" />

    </LinearLayout>


</ScrollView>
