<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/robot"
    tools:context=".Fibonacci">

    <Button
        android:id="@+id/btnHelloWorld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnScrollSianida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scroll Sianida"
        android:layout_below="@id/btnHelloWorld"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnActivitySatu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_satu"
        android:layout_below="@id/btnScrollSianida"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnFibonacci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fibonacci"
        android:layout_below="@id/btnActivitySatu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert"
        android:layout_below="@id/btnFibonacci"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
